# search-engine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: DocumentParser.hpp  InvertedIndex.hpp  Trie.hpp
src/: DocumentParser.cpp  InvertedIndex.cpp  Trie.cpp  main.cpp
tests/: test_trie.cpp
